# s3view

./: .gitignore  Changelog.rst  build_docs.py  environment.yml  oldsetup.py  p5list  pyproject.toml  readme.md  s3v.py  setup.py  skin.py
.github/workflows/: build-and-deploy-on-pypi.yml  run-tests.yml
cfs3/: __init__.py  cfchunking.py  cftools.py  drs_view.py  logging_utils.py  p5inspect.py  s3cache.py  s3cmd.py  s3core.py  s3sci.py  s3up.py  s3view.py  skin.py
doc/: DRS.rst  _sidebar.rst.inc  cftools.rst  changelog.rst  chunking.rst  conf.py  gensidebar.py  index.rst  introduction.rst  metadata.rst  object_stores.rst  repacking.rst  s3view.rst
doc/ext/: cmd2_formatter.py
s3v/: cfchunking.py  cftools.py  drs_view.py  inspect.py  logging_utils.py  p5inspect.py  s3cmd.py  s3core.py  s3sci.py  s3up.py  s3v.py  s3view  s3view.py  skin.py
tests/: conftest.py  test_cache.py  test_cftools.py  test_drsview.py  test_minio_stuff.py  test_p5dump.py  test_s3v.py
tests/data/: common_cl_a_copy.nc
tests/utils/: make_test_data.py
